Bug 100327 - gtk3, Impossible to select Yes or No to say if we want to replace the file during saving
Summary: gtk3, Impossible to select Yes or No to say if we want to replace the file du...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.0.1 target:5.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-11 09:15 UTC by Julien Nabet
Modified: 2016-10-25 18:54 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2016-06-11 09:15:29 UTC
On pc Debian x86-64 with master sources updated yesterday + gtk3 rendering, impossible to select Yes or No button to indicate that we want to replace the file or not.

Steps to reproduce:
1) Create "test.odb" on a directory
2) Launch Base
3) Try to create a brand new DB file and call it "test.odb" too in the same directory
4) Popup "A file named "test.odb"already exists. Do you want to replace it?"
+ "Yes" and "No" button

=> No button is selected by default
=> Impossible to click on any of them

I don't reproduce this with gtk rendering.
Comment 1 Buovjaga 2016-06-12 14:37:40 UTC
Repro.
I had to press Esc on Keyboard and then I could close the dialog.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: e1ca24369142af3e721e789bf757be671e1905b7
CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Built on June 10th 2016
Comment 2 Julien Nabet 2016-06-16 19:18:14 UTC
With master sources updated today (5bf3ae663a2189e37959235cda8c6a4051e10a1a), I can still reproduce this.

Caolán: thought you might be interested in this one since it concerns gtk3 only bug.
Comment 3 Commit Notification 2016-06-16 20:09:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=83b7c1ae8068787212f757b9c8b9c317537a2dd2&h=libreoffice-5-2

Resolves: tdf#100327 gtk3 fpicker yes/no dialog modal trouble

It will be available in 5.2.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2016-06-16 20:09:35 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e50caebc02ee2045a38a39b4a4c644da0d678541

Resolves: tdf#100327 gtk3 fpicker yes/no dialog modal trouble

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2016-06-17 06:03:34 UTC
With master sources updated today, I don't reproduce this.

Thank you Caolán!