Resolves: tdf#100327 gtk3 fpicker yes/no dialog modal trouble

not sure why we ever hid the file dialog when putting up the
yes/no dialog. So lets just do the more apparently sensible thing
on the gtk3 path and leave gtk2 alone.

Probably fallout from using window groups

Change-Id: I4d0e8fae9568b050b674cf6ef4d8c88e65dd2ca1